[gd_scene load_steps=21 format=2]

[ext_resource path="res://game/assets/environment/shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://game/assets/enemies/bat/Bat.png" type="Texture" id=2]
[ext_resource path="res://game/src/Enemies/Bat/Bat.gd" type="Script" id=3]
[ext_resource path="res://game/src/Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/src/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/src/Enemies/Bat/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/src/Overlap/Hibox.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/src/Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/src/Enemies/Bat/WanderControler.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.11469

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.98148
height = 0.991516

[sub_resource type="CircleShape2D" id=9]
radius = 82.5136

[sub_resource type="CircleShape2D" id=10]
radius = 3.77074

[sub_resource type="CircleShape2D" id=11]
radius = 2.38556

[node name="Bat" type="KinematicBody2D"]
position = Vector2( 1.18921, 12.1894 )
collision_layer = 16
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
FRICTION = 140

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0252686, 0.00699615 )
frames = SubResource( 6 )
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.235977, -13.0963 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 80

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 0, 0, 0, 0.184314 )
light_mask = -2147483647
shape = SubResource( 9 )

[node name="Hibox" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, 0.125 )
collision_mask = 4

[node name="CollisionShape2D" parent="Hibox" index="0"]
position = Vector2( 0.604359, -15.2767 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderControler" parent="." instance=ExtResource( 9 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hibox"]
[editable path="SoftCollision"]
